@@ -34,6 +34,7 @@
    * Change preferred ANSI code page for Turkish(1254)/Hebrew(1255)
    * Keep italic/bold/u from RTF in "Import plain text" - thx George
    * "Modify selection/uppercase" now ignores tags - thx  Lokotito
+   * Spell check: Allow user words starting with dash - thx t2YU2m8l83
 * FIXED:
    * Fix for overlap in "Tools -> Adjust durations" - thx Christian
    * Fix bug in EBU STL ms to frames - thx Lucius Snow
